objects/pse__Utilization_Engine__c.object
<CustomObject>
    <fields>
        <fullName>pse__Period__c</fullName>
        <label>Period</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Utilization Engines</relationshipLabel>
        <relationshipName>Utilization_Engines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__data_10_10__c</fullName>
        <label>10-10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_10_11__c</fullName>
        <label>10-11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_10_12__c</fullName>
        <label>10-12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_10__c</fullName>
        <label>Month 10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_11__c</fullName>
        <label>Month 11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_12__c</fullName>
        <label>Month 12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data__c</fullName>
        <label>Year</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_month_10_14ds__c</fullName>
        <label>month 10-14 day total</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_month_10_21ds__c</fullName>
        <label>month 10-21 day total</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__data_month_10_28ds__c</fullName>
        <label>month 10-28 day total</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Utilization Engine</label>
    <nameField>
        <displayFormat>UE-{000000000}</displayFormat>
        <label>Utilization Engine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Engines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>